--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@supabase/supabase-js": "^2.89.0",
+    "cheerio": "^1.1.2",
     "dotenv": "^17.2.3",
     "jose": "^6.1.3",
     "openai": "^6.15.0",
@@ -75,3 +76,4 @@
     "testEnvironment": "node"
   }
 }
+
