--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^17.2.3",
     "jose": "^6.1.3",
     "openai": "^6.15.0",
+    "pdf-parse": "^2.4.5",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^4.3.2"
@@ -41,7 +42,9 @@
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
+    "@types/pdf-parse": "^1.1.5",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
@@ -76,4 +79,3 @@
     "testEnvironment": "node"
   }
 }
-
